--- a/Comms/Comms.csproj
+++ b/Comms/Comms.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\arty.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\arty.proto" />
     <Protobuf Include="Protos\greet.proto" GrpcServices="Both" />
   </ItemGroup>
 
