--- a/Comms/appsettings.json
+++ b/Comms/appsettings.json
@@ -9,8 +9,8 @@
   "Kestrel": {
     "Endpoints": {
       "gRPC": {
-        "Url": "https://localhost:5005",
-        "Protocols": "Http2"
+        "Url": "http://localhost:5005",
+        "Protocols": "Http1AndHttp2"
       }
     }
   }
