gRPC.Core comms working. Switched away from using Grpc.Net.

--- a/PitBoss/PitBoss.csproj
+++ b/PitBoss/PitBoss.csproj
@@ -9,7 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Comms\Comms.csproj" />
+    <PackageReference Include="Google.Protobuf" Version="3.27.3" />
+    <PackageReference Include="Grpc" Version="2.46.6" />
+    <PackageReference Include="Grpc.Core" Version="2.46.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Comms_Core\Comms_Core.csproj" />
   </ItemGroup>
 
 </Project>
