--- a/Comms_Core/Comms_Core.csproj
+++ b/Comms_Core/Comms_Core.csproj
@@ -1,32 +1,32 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="appsettings.json.blah" />
     <None Remove="Protos\arty.proto" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="appsettings.json.blah" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Protobuf Include="Protos\arty.proto" />
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Both" />
+    <None Remove="Protos\greet.proto" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.27.3" />
+    <PackageReference Include="Grpc" Version="2.46.6" />
     <PackageReference Include="Grpc.Core" Version="2.46.6" />
     <PackageReference Include="Grpc.Tools" Version="2.65.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\arty.proto" />
+    <Protobuf Include="Protos\greet.proto">
+      <GrpcServices>Both</GrpcServices>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
